# CPS1011

./: README.md
C PROJECT 1/: CMakeLists.txt  Question1.c
C PROJECT 2/: CMakeLists.txt  GenSet1.c  GenSet1.h  GenSet2.c  GenSet2.h  TestGenSet1.c  TestGenSet2.c
